code25_all/python/1861555.txt
#! /usr/bin/python

recipients = []
recipients.append('chris@elserinteractive.com')

for recip in recipients:
    print recip

File "send_test_email.py", line 31
    print recip
              ^
SyntaxError: invalid syntax

